[package]
name = "hanji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo",rev = "v1.0.0-alpha.6"}
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo",rev = "v1.0.0-alpha.6"}
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo",rev = "v1.0.0-alpha.6"}
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo",rev = "v1.0.0-alpha.6"}
colored = "2"
itertools = "0.10.3"
smol_str = "0.1.23"
