[package]
name = "hanji"
version = "0.1.1"
edition = "2021"
default-run = 'hanji'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo",rev = "v1.0.0-rc0"}
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo",rev = "v1.0.0-rc0"}
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo",rev = "v1.0.0-rc0"}
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo",rev = "v1.0.0-rc0"}
colored = "2"
itertools = "0.10.3"
smol_str = { version = "0.2.0", features = ["serde"] }
clap = { version = "4.3.1", features = ["derive"] }

[[bin]]
name = "hanji"
path = "src/bin/main.rs"
